<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ViThess"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp" /> 
    
    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp" />
    
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeTextTitle"
        android:textColor="#F0F0F0"
        android:background="@drawable/transparent_background"
        android:textSize="18sp"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:layout_gravity="center_horizontal"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp" 
		android:fontFamily="sans-serif-light"  />
     
      <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeText"
        android:textColor="#F0F0F0"
        android:background="@drawable/transparent_background"
        android:textSize="14sp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:layout_gravity="center_horizontal"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp" />

</LinearLayout>

